appId: ${APP_ID}
---
- evalScript: ${output.currentQuery = "How is the HDFC FlexiCap fund?"}

- runFlow:
    file: ../auth/login.yaml

- tapOn:
    id: ${output.ids.INPUT_FIELDS.CHAT_INPUT}

- inputText:
    id: ${output.ids.INPUT_FIELDS.CHAT_INPUT}
    text: ${output.currentQuery}
- tapOn:
    id: ${output.ids.BUTTONS.SEND_QUERY}

- assertVisible:
    id: 'message-response${output.env.counter}'
    optional: true

- evalScript: ${output.env.counter++}

- assertVisible:
    id: ${output.PERF_YEAR_TO_CHART[output.PERF_YEARS.FIVE_YR]}
    optional: true

- scrollUntilVisible:
    element:
      id: ${output.ids.BUTTONS.SUGGESTION_CHIP}0
    direction: DOWN

- tapOn:
    id: ${output.ids.BUTTONS.SUGGESTION_CHIP}0

# Overview
- extendedWaitUntil:
    visible:
      id: ${output.PERF_YEAR_TO_CHART[output.PERF_YEARS.FIVE_YR]}
    timeout: 30000

- evalScript: ${output.env.BUTTONID = output.PERF_YEARS.ONE_YR}
- evalScript: ${output.env.CHARTID = output.PERF_YEAR_TO_CHART[output.PERF_YEARS.ONE_YR]}

- runFlow:
    file: ../utils/TapWait.yaml

- evalScript: ${output.env.BUTTONID = output.PERF_YEARS.THREE_YR}
- evalScript: ${output.env.CHARTID = output.PERF_YEAR_TO_CHART[output.PERF_YEARS.THREE_YR]}

- runFlow:
    file: ../utils/TapWait.yaml

- evalScript: ${output.env.BUTTONID = output.PERF_YEARS.ALL_YR}
- evalScript: ${output.env.CHARTID = output.PERF_YEAR_TO_CHART[output.PERF_YEARS.ALL_YR]}

- runFlow:
    file: ../utils/TapWait.yaml

# Fund Details
- tapOn:
    id: ${output.ids.BUTTONS.MFTAB_FUND_DETAILS}

- tapOn:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.ASSET_ALLOCATION}
- assertVisible:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.EXPANDED_VIEW.ASSET_ALLOCATION}
- tapOn:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.ASSET_ALLOCATION}

- tapOn:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.METRICS}
- assertVisible:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.EXPANDED_VIEW.METRICS}
- tapOn:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.METRICS}

- tapOn:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.SECTORWISE_EQU_ALLOC}
- assertVisible:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.EXPANDED_VIEW.SECTORWISE_EQU_ALLOC}
- tapOn:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.SECTORWISE_EQU_ALLOC}

- tapOn:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.TOPHOLDINGS}
- assertVisible:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.EXPANDED_VIEW.TOPHOLDINGS}
- tapOn:
    id: ${output.ids.COMPONENTS.FUND_DETAILS.TOPHOLDINGS}

- tapOn:
    id: ${output.ids.BUTTONS.BACK_BUTTON_MF_HEADER}

- tapOn:
    id: ${output.ids.BUTTONS.BACK_BUTTON_MF_HEADER}
