appId: ${APP_ID}
---
- tapOn:
    id: ${output.env.PERF}
- tapOn:
    id: ${output.ids.BUTTONS.VIEW_MORE}

- extendedWaitUntil:
    visible:
      id: ${output.env.SCREENID}
    timeout: 20000

- extendedWaitUntil:
    visible:
      id: ${output.PERF_YEAR_TO_CHART[output.PERF_YEARS.ALL_YR]}
    timeout: 30000

- evalScript: ${output.env.BUTTONID = output.PERF_YEARS.ONE_YR}
- evalScript: ${output.env.CHARTID = output.PERF_YEAR_TO_CHART[output.PERF_YEARS.ONE_YR]}

- runFlow:
    file: TapWait.yaml

- evalScript: ${output.env.BUTTONID = output.PERF_YEARS.THREE_YR}
- evalScript: ${output.env.CHARTID = output.PERF_YEAR_TO_CHART[output.PERF_YEARS.THREE_YR]}

- runFlow:
    file: TapWait.yaml

- evalScript: ${output.env.BUTTONID = output.PERF_YEARS.FIVE_YR}
- evalScript: ${output.env.CHARTID = output.PERF_YEAR_TO_CHART[output.PERF_YEARS.FIVE_YR]}

- runFlow:
    file: TapWait.yaml

- assertVisible:
    id: ${output.env.AIINSIGHTS}
